# cheap-of-empire

./: .flake8  .gitignore  .pre-commit-config.yaml  .replit  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: python-package.yml  tests.yml
COE/: main.py
COE/AI/: dummy.py
COE/UI/: UI_Fenetre.py  cheat_code.py  item.py  text.py  time_counting.py  window_ui.py
COE/UI/interfaces/: Interface_MenuJouer.py  Interface_MenuMultiplayers.py  Interface_MenuNewGame.py  Interface_MenuOptions.py  Interface_MenuPrincipale.py  game_render.py  interface_in_game.py  interface_loader.py  interface_menu_multiplayers.py  interface_menu_newgame.py  interface_menu_options.py  interface_play_menu.py  main_menu.py
COE/assets/: load_assets.py
COE/camera/: camera.py
COE/contents/: Entity.py  __init__.py  entity.py  entity_types.py
COE/contents/building/: __init__.py  archery_range.py  barrack.py  building.py  dock.py  farm.py  granary.py  house.py  market.py  military_building.py  small_wall.py  stable.py  storage_building.py  storage_pit.py  technology_building.py  town_center.py  watch_tower.py
COE/logic/: Game.py  GameSaveLoad.py  Player.py  __init__.py  create_game.py  game_logic.py  path_finding.py  time.py
COE/map/: MapGenerator.py  cell.py  map.py
save/: autres  test  test2
save\/: test
tests/: test_building.py  test_cell.py  test_entity.py  test_exemple.py  test_fenetre.py  test_game.py  test_gamesaveload.py  test_main.py  test_manage_resource.py  test_map.py  test_pathfinding.py  test_player.py  test_resources.py  test_unit.py
(+45 files in other folders)
