[tool.poetry]
name = "cheap-of-empire"
version = "0.2.0"
description = "An RTS game, AoE like, developed in Python"
authors = ["Leonard Deletre <contact@leonarddeletre.com>", "Octave Gassot Laffont <octave.gassot_laffont@insa-cvl.fr>"]
packages = [
    { include = "COE/AI" },
    { include = "COE/contents" },
    { include = "COE/logic" },
    { include = "COE/UI" },
    { include = "COE/map" },
]

[tool.black]
include = '''
/(
  tests
  | COE
)/
'''

extend-exclude = '''
/(
  COE/UI/interfaces/images
  | COE/assets
)/
'''

[tool.pytest.ini_options]
addopts = "--cov=COE/ --cov-fail-under=80"
testpaths = [
    "tests",
]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.15.0"
flake8 = "^3.9.2"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
black = "^21.9b0"
pygame = "^2.0.2"
pygame-gui = "^0.5.7"
tox = "^3.24.4"
pathfinding = "^1.0.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

